Programming Languages/Hw2/part4/t37.output
running e2c
compiling the C generated code
t37.c: In function ‘main’:
t37.c:4:2: error: expected expression before ‘=’ token
  = ;
  ^
t37.c:5:16: error: ‘a’ undeclared (first use in this function)
 printf("%d\n", a);
                ^
t37.c:5:16: note: each undeclared identifier is reported only once for each function it appears in
t37.c:6:8: error: expected expression before ‘<=’ token
 if( -  <= 0){
        ^
t37.c:7:2: error: expected expression before ‘=’ token
  = ;
  ^
t37.c:9:8: error: expected expression before ‘<=’ token
 if( -  <= 0){
        ^
t37.c:10:2: error: expected expression before ‘=’ token
  = ;
  ^
t37.c:12:8: error: expected expression before ‘<=’ token
 if( -  <= 0){
        ^
t37.c:13:2: error: expected expression before ‘=’ token
  = ;
  ^
